syntax="proto3";

option java_package = "com.alex.grpc.core.generated";
option java_multiple_files=true;

message PostRequest {
  int32 id = 1;
}

message PostResponse {
  int32 id = 1;
  string title = 2;
  string content = 3;
  int32 releaseYear = 4;
  Author author = 5;
}

message Author {
  int32 id = 1;
  string name = 2;
  string email = 3;
}

service PostService {
  rpc GetPost(PostRequest) returns (PostResponse);
}